# Fractional-Calculator

./: CMakeLists.txt  Submitted Program 1.sln  main.cpp
Debug/: Submitted Program 1.ilk
Submitted Program 1/: Calculation.cpp  Calculation.h  Fraction.cpp  Fraction.h  Submitted Program 1.cpp  Submitted Program 1.vcxproj  Submitted Program 1.vcxproj.filters
Submitted Program 1/Debug/: Submitted Program 1.pch  submitted program 1.obj.enc  vc141.idb
Submitted Program 1/Debug/Submitte.F7B9E784.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Submitted Program 1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Submitted Program 1/x64/Debug/: Submitted Program 1.exe.recipe  Submitted Program 1.ilk  Submitted Program 1.pch  vc142.idb
Submitted Program 1/x64/Debug/Submitte.F7B9E784.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Submitted Program 1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
inc/: Calculation.h  Fraction.h
src/: Calculation.cpp  Fraction.cpp
